add gitignore file- created getUserByToken and userUpdate
