# src/userController/userController.ts
@@ -13,12 +13,14 @@ import {
     Tags,
     Security,
     Request,
+    Put,
   } from "tsoa";
   
   
-  import {UserService, getUsers, userAuthentication} from '../userService/userService'
+  import {UserService, getUsers} from '../userService/userService'
   import { createToken } from "../createJWT";
   import { User } from "../db/userTable";
+import { JwtPayload } from "jsonwebtoken";
 
 interface params{
   firstname:string,
@@ -81,7 +83,7 @@ export class getUser extends Controller {
     @Post("/login")
     public async userLogin( @Body() user:UserResponseModel): Promise<checkUserExists| string |void> {
       try{
-        const userExists = await new userAuthentication().getLogIn(user)
+        const userExists = await new UserService().userLogIn(user)
         if(userExists){
           const result={token:createToken(user.email, "user"), isUser:userExists}
           return result
@@ -92,4 +94,47 @@ export class getUser extends Controller {
       console.log(error)
     }
     }
+}
+
+
+@Route("/user")
+export class getUserByToken extends Controller { 
+    @Tags("User")
+    @Get("/token")
+   
+    public async userToken( @Query() token:string): Promise<any> {
+      try{
+       const result=  await new UserService().getUserByToken(token)
+       return result
+    }
+    catch(error:any){
+      console.log(error)
+    }
+    }
+}
+
+
+interface userUpdateResponse{
+  newFirstname?:string,
+  newLastname?: string,
+  oldEmail:string,
+  newEmail?: string, 
+  newPassword?:string
+
+}
+
+
+
+@Route("/user")
+export class userUpdate extends Controller { 
+    @Tags("User")
+    @Put("/update")
+    public async updateUserData( @Body()updateData:userUpdateResponse): Promise<string> {
+      try{
+       const result=  await new UserService().userUpdate(updateData)
+       return result
+    }catch (error: any) {
+      throw error
+    } 
+  }
 }
